fixed nav elements alignment

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ h1 {
   text-align: center;
 }
 
+nav {
+  width: 50%;
+  max-width: 300px;
+  height: 50px;
+}
+
 nav > ul {
   display: flex;
   justify-content: space-evenly;
@@ -121,4 +127,38 @@ input {
 .info > input {
   display: inline-block;
   text-align: right;
+}
+
+.question-block {
+  text-align: left;
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  padding-top: 5px;
+}
+
+p {
+  margin: 5px;
+  padding-left: 15px;
+  font-size: 20px;
+}
+
+.question {
+  padding-bottom: 0;
+  border: none;
+}
+
+.answers-list {
+  list-style: none;
+  padding: 0;
+}
+
+button {
+  display: block;
+  margin: 40px auto;
+  width: 40%;
+  padding: 15px;
+  font-size: 23px;
+  background: #d0d0d5;
+  border: 3px solid #3b3b4f;
 }
